<?xml version="1.0"?>
<package format="3">
  <name>hospital_mission</name>
  <version>0.0.1</version>
  <description>Simple mission controller for ROS2 Humble + Nav2 environments.</description>
  <maintainer email="dev@example.com">Mission Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_simple_commander</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
